@@ -6,3 +6,4 @@ Date         Tag             Description
 2017-04-24   v3.1.1          Deep learning version of ProQ3D with keras1, as published in Uziela K, Menéndez Hurtado D, Shu N, Wallner B, Elofsson A (2017) 'ProQ3D: improved model quality assessments using deep learning' Bioinformatics, doi: 10.1093/bioinformatics/btw819, PMID: 28052925.
 2017-04-24   v3.1.2          Deep learning version of ProQ3D that works with keras v.2 (although models were trained with keras v.1)
 2017-10-10   v3.2            ProQ3D version that supports S-score, TM-score, CAD and lDDT quality measures
+2017-10-22   v3.2.1          Added helper script ./proq3_all.sh that employs GNU Parallel
